[tool.poetry]
name = "repl_python3_beta_salivabot"
version = "0.1.0"
description = ""
authors = ["Pmsilva1 and Michelle"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
Flask = "^2.0.3"
quart = "^0.16.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
